test/Translate/Control/table_basic.p4.ref
error: loc("test/Translate/Control/table_basic.p4":50:8): exportParameterReference called with non-FunctionOp parent: 
"p4hir.table_key"() <{applyType = !p4hir.func<(!p4hir.bit<32>)>}> ({
^bb0(%arg0: !p4hir.bit<32>):
  "p4hir.match_key"(%arg0) <{annotations = {name = "arg.key"}, match_kind = #p4hir.match_kind<"exact">}> : (!p4hir.bit<32>) -> ()
  %0 = "p4hir.const"() <{value = #p4hir.bool<false> : !p4hir.bool}> : () -> !p4hir.bool
  "p4hir.match_key"(%0) <{annotations = {name = "false.key"}, match_kind = #p4hir.match_kind<"lpm">}> : (!p4hir.bool) -> ()
}) : () -> ()
note: loc("test/Translate/Control/table_basic.p4":50:8): see current operation: 
"p4hir.table_key"() <{applyType = !p4hir.func<(!p4hir.bit<32>)>}> ({
^bb0(%arg0: !p4hir.bit<32>):
  "p4hir.match_key"(%arg0) <{annotations = {name = "arg.key"}, match_kind = #p4hir.match_kind<"exact">}> : (!p4hir.bit<32>) -> ()
  %0 = "p4hir.const"() <{value = #p4hir.bool<false> : !p4hir.bool}> : () -> !p4hir.bool
  "p4hir.match_key"(%0) <{annotations = {name = "false.key"}, match_kind = #p4hir.match_kind<"lpm">}> : (!p4hir.bool) -> ()
}) : () -> ()
  48 |         size = 42;
  49 |      // CHECK:  %size = p4hir.table_size #int42_infint
  50 |         largest_priority_wins = false;
     |        ^
  51 |       // CHECK: %largest_priority_wins = p4hir.table_property "largest_priority_wins" {
  52 |         priority_delta = 10;
